--- a/src/cppMain/CMakeLists.txt
+++ b/src/cppMain/CMakeLists.txt
@@ -10,10 +10,18 @@ FetchContent_MakeAvailable(vendor)
 include_directories(${vendor_SOURCE_DIR}/include ${vendor_SOURCE_DIR}/fp16/include)
 
 if (BUILD_SHARED_LIBS MATCHES ON)
-    add_library(ksearch SHARED lib.cpp lib.h)
+    find_package(Java REQUIRED)
+    find_package(JNI REQUIRED)
+
+    include_directories(${JNI_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/bridging)
+    add_library(ksearch SHARED
+            lib.cpp lib.h
+            jexceptions.h jexceptions.cpp
+            jbridge.cpp)
 endif ()
 if (BUILD_STATIC_LIBS MATCHES ON)
-    add_library(ksearch STATIC lib.cpp lib.h)
+    add_library(ksearch STATIC
+            lib.cpp lib.h)
 endif ()
 
 if (CMAKE_SYSTEM_PROCESSOR EQUAL arm)
