--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,4 @@ kotlin.native.cacheKind.linuxX64=none
 kotlin.native.cacheKind.macosX64=none
 kotlin.native.cacheKind.mingwX64=none
 android.useAndroidX=true
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
