--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,10 +5,12 @@ kotlin = "2.1.0"
 dokka = "2.0.0"
 androidxTest = "1.2.1"
 mavenPublisher = "0.30.0"
+coroutines = "1.10.2"
 
 [libraries]
 kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5-jvm", version.ref = "kotest" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 junit = { module = "junit:junit", version = "4.13.2" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTest" }
 androidx-test-ext-junit-ktx = { module = "androidx.test.ext:junit-ktx", version.ref = "androidxTest" }
