--- a/src/cppMain/CMakeLists.txt
+++ b/src/cppMain/CMakeLists.txt
@@ -2,12 +2,11 @@ cmake_minimum_required(VERSION 3.27)
 
 project(usearch-bridge VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 11)
+set(USEARCH_USE_FP16LIB ON)
 include(FetchContent)
 
 FetchContent_Declare(vendor GIT_REPOSITORY https://github.com/unum-cloud/usearch.git GIT_TAG v2.17.7)
 FetchContent_MakeAvailable(vendor)
-
-include_directories(${vendor_SOURCE_DIR}/include ${vendor_SOURCE_DIR}/fp16/include)
 
 if (BUILD_SHARED_LIBS MATCHES ON)
     set(JAVA_INCLUDE_PATH "$ENV{JAVA_HOME}/include")
@@ -20,12 +19,24 @@ if (BUILD_SHARED_LIBS MATCHES ON)
             lib.cpp lib.h
             jexceptions.h jexceptions.cpp
             jbridge.cpp)
+    target_link_libraries(ksearch PRIVATE usearch)
+    add_dependencies(ksearch usearch)
 endif ()
 if (BUILD_STATIC_LIBS MATCHES ON)
     add_library(ksearch STATIC
             lib.cpp lib.h)
+
+    if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+        target_compile_options(ksearch PRIVATE -static-libstdc++)
+        target_link_options(ksearch PRIVATE -static-libstdc++)
+    elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+        target_compile_options(ksearch PRIVATE -static)
+        target_link_options(ksearch PRIVATE -static)
+    endif ()
+
+    target_link_libraries(ksearch PRIVATE usearch)
+    add_dependencies(ksearch usearch)
 endif ()
 
-if (CMAKE_SYSTEM_PROCESSOR EQUAL arm)
-    target_compile_definitions(ksearch PUBLIC USEARCH_DEFINED_ARM)
-endif ()
+add_executable(ksearch_test lib.cpp lib.h main.cpp)
+target_link_libraries(ksearch_test PRIVATE usearch)
